k8s-ingress/nginx-plus-ingress/bigip/specific-ingress-class/example-ingress-fintech.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: fintech
  name: cafe-ingress
  namespace: nginxtest03
spec:
  rules:
  - host: nginxtest03.example.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: fintech
  name: cafe-ingress
  namespace: nginxtest04
spec:
  rules:
  - host: nginxtest04.example.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
